--- a/css/background.css
+++ b/css/background.css
@@ -1,6 +1,6 @@
 
 body
-{background:url(../slike/osijek1.png) no-repeat center center fixed;
+{background:url(../slike/osijek1.jpg) no-repeat center center fixed;
  -webkit-backgroun-size:cover;
  -moz-background-size:cover;
  -o-background-size:cover;
